--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,618 @@
 @import url("./variables.css");
 /* Feel free to add as many of these imports as you need */
 
-body {
-  color: var(--color-primary);
-  background-color: var(--color-secondary);
+@media (max-width: 2000px) {
+  body {
+    display: flex;
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    background: linear-gradient(180deg, #1B203D 0px, #7E8AB4 100%);
+    font-family: 'Staatliches';font-size: 22px;
+  }
+  
+  .fixed-nav-bar-mobile {
+   visibility: hidden;
+   display: block; 
+  }
+
+  header {
+    max-width: 100%;
+    width: 100%;
+    margin: 25px;
+  }
+  
+  main {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .top-bar {
+    width: 100%;               
+    height: 130px;               
+    background-color: #1B203D;  
+    color: #1B203D;               
+    display: flex;
+    align-items: center;
+    padding-left: 0px; 
+    box-sizing: border-box;
+    position: relative;
+    margin-top: 0px;
+  }
+  
+  .top {
+  display: flex;
+  flex-shrink: 0;
+  max-width: 100%;
+  height: 61px;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  padding: ;
+  position: relative;
+  background: #1B203D;
+  }
+  
+  .logo-container {
+    display: flex;
+    max-width: 100%;
+    width: 100%;
+    height: 325px;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 2%;
+    gap: 10px;
+    flex-shrink: 1;
+    background: #7E8AB4;
+    margin-top: 72px;
+    flex: 1;
+  }
+  
+  .cart-hamburger {
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: auto;
+    padding-right: 5%;
+    margin-top: -15%;
+  }
+  
+  .web-logo {
+    display: flex;
+    flex-shrink: 1;
+    max-width: 248px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    position: relative;
+  
+  }
+  
+  ul {
+    list-style-type: none; 
+    padding-left: 0;
+  } 
+  
+  main {
+    width: 100%;
+    margin-top: 250px;
+  }
+  
+  
+  
+  h1 { 
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    margin-top: -120px;
+    position: relative;
+    color: #FFF;
+    background-color: #1B203D;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+  }
+  
+  .h1-bar {
+    width: 100%;
+  }
+  
+  .h1-bar-cart {
+    max-width: 100%;
+    width: 100%;
+  }
+  
+  .game-poster {
+   max-width: 100%;
+   max-height: 100%;
+   height: 200px;
+   margin-top: 80px;
+  display: flex;
+  justify-content: space-between;
+  }
+  
+  .game-gallery {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: #7E8AB4;
+    padding: 65px;
+    margin-top: -115px;
+  }
+  
+  .new.releases.bar {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      margin-top: -120px;
+      position: relative;
+      color: #FFF;
+      background-color: #1B203D;
+      align-items: center;
+      justify-content: center;
+      padding: 10px;
+  }
+  
+  .new-rel-bar {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: -20px;
+    position: relative;
+    color: #FFF;
+    background-color: #1B203D;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+  }
+  
+  .main-page-game-list {
+    
+  }
+  
+  h2 {
+    width: 150px;
+    padding-left: 40px;
+    padding-right: 50px;
+    color: #FFF;
+  }
+  
+  .game-des {
+    color: #FFF;
+    max-width: 50%;
+    justify-content: flex-start;
+    padding: 5px;
+    font-size: 60%;
+  }
+  
+  
+  .super-duper {
+    max-width: 100%;
+    display: flex;
+    padding: 50px;
+    justify-content: space-between;
+    background: linear-gradient(90deg, rgba(255, 236, 9, 0.18) 38%, rgba(126, 138, 180, 0.18) 100%);
+    box-shadow: 0px 4px 10.9px 0px rgba(0, 0, 0, 0.25);
+  
+  }
+  
+  .black {
+    max-width: 100%;
+    display: flex;
+    padding: 50px;
+    justify-content: space-between;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.42) 11.5%, rgba(126, 138, 180, 0.42) 100%);
+    box-shadow: 0px 4px 10.9px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  .racing {
+    padding: 50px;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background: linear-gradient(90deg, rgba(255, 0, 4, 0.42) 11.5%, rgba(126, 138, 180, 0.42) 100%);
+    box-shadow: 0px 4px 10.9px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  .forge-legend {
+    padding: 50px;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background: linear-gradient(90deg, rgba(236, 144, 9, 0.42) 11.5%, rgba(126, 138, 180, 0.42) 100%);
+    box-shadow: 0px 4px 10.9px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  .cta-addcart-button {
+    padding: 10px 20px; 
+    background-color: #ffffff; 
+    border: none; 
+    border-radius: 50px; 
+    cursor: pointer;
+    margin-bottom: 175px; 
+  }
+  
+  .cta-addcart-button:hover {
+    background-color: #7E8AB4; 
+  }
+  
+  
+  
+  footer {
+    max-width: 100%;
+    width: 100%;
+    margin-top: 340px;
+    padding: 0px;
+    background: linear-gradient(0deg, #2F3A7C 0%, #414A69 100%);
+    
+  }
+  
+  .invincible {
+    color: #1B203D;
+    background-color: #1B203D;
+    max-width: 100%;
+    width: 100%;
+    height: 70px;
+  }
+  
+  .bottom {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  
+  .web-logo-bottom {
+    display: flex;
+    width: 248px;
+    flex-direction: column;
+    gap: 10px;
+    position: relative;
+    left: 115px;
+    margin-top: 85px;
+    
+  }
+  
+  .games-catalogue {
+    margin: 100px;
+    display: flex;
+    
+  }
+  
+  .BROWSE {
+    width: 100%;
+  }
+  
+  .FC-button {
+    display: flex;
+    width: 244px;
+    height:20px;
+    flex-direction: column;
+    justify-content: center;
+    padding: 23px 30px; 
+    background-color: #1B203D; 
+    color: white; 
+    border: none; 
+    border-radius: 10px; 
+    cursor: pointer;
+  }
+  
+  
+  
+  .bottom-nav-bar {
+    background-color: #1B203D;
+    width: 100%;               
+    height: 200px;               
+    background-color: #1B203D;  
+    color: #1B203D;               
+    display: flex;
+    align-items: center; 
+    box-sizing: border-box;
+    position: relative;
+    justify-content: space-between;
+  
+  }
+  
+  .nav-content {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    color: #FFF;
+  }
+  
+  .cart-column {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    gap: 20px;
+    margin-top: -200px;
+  }
+  
+  .prod-price {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 600px;
+  }
+  
+  .column {
+    flex: 1;
+    padding:0px;
+    margin: -200px;
+  }
+  
+  
+  
+  .center-column {
+    flex: 2;
+    background-color: #7E8AB4;
+    text-align: center;
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .cart-game-title {
+    display: flex;
+    width: 100%;
+    height: auto;
+    margin-top: 160px;
+  }
+  
+  .cart-price {
+    color: #FFF;
+    padding: 10%;
+    width: 100%;
+  }
+  
+  .payment-methods {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0;
+  }
+  
+  .cta-payment-methods {
+    display: flex;
+    width: 134px;
+    height: 62px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 35px;
+    background: #FFF;
+  }
+  
+  .game-cover-cart {
+    display: flex;
+    max-width: 100%;
+    height: 250px;
+    margin-top: 45px;
+    margin-left: 180px;
+    background-color: #FFF;
+  }
+  
+  .checkout-txt {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .payment-txt {
+    padding: 10%;
+  }
+  
+  .full-catalogue {
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+  }
+  
+  .about-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 15%;
+    padding-right: 15%;
+  }
+  
+  .SUPPORT-OVERVIEW {
+    display: flex;
+    max-width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: auto;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10%;
+    padding-bottom: 20%;
+  
+
+  }
+
+  .FAQ {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-color: #7E8AB4;
+    padding: 65px;
+    margin-top: -115px;
+  }
+
+  .CONTACT-FORM {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 5%;
+  }
+
+  .FAQ-txt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+  }
+
 }
 
-.centered {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+
+@media (max-width: 700px) {
+  .logo-container {
+    padding: 50px;
+  }
+
+  .game-des {
+    visibility: hidden;
+    color: #FFF;
+    max-width: 50%;
+    justify-content: flex-start;
+    padding: 5px;
+  }
+
+  h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  .super-duper {
+    max-width: 100%;
+    max-heigh: 400px;
+    height: 400px;
+    display: flex;
+    padding: 10px;
+    justify-content: space-evenly;
+    background: linear-gradient(90deg, rgba(255, 236, 9, 0.18) 38%, rgba(126, 138, 180, 0.18) 100%);
+    box-shadow: 0px 4px 10.9px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  
+  .black {
+    max-width: 100%;
+    max-height: 400px;
+    height: 400px;
+    display: flex;
+    padding: 10px;
+    justify-content: space-evenly;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.42) 11.5%, rgba(126, 138, 180, 0.42) 100%);
+    box-shadow: 0px 4px 10.9px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  .racing {
+    max-width: 100%;
+    max height: 400px;
+    height: 400px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    background: linear-gradient(90deg, rgba(255, 0, 4, 0.42) 11.5%, rgba(126, 138, 180, 0.42) 100%);
+    box-shadow: 0px 4px 10.9px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  .forge-legend {
+     max-width: 100%;
+     max height: 400px;
+     height:  400px;
+     padding: 10px;
+    display: flex;
+    background: linear-gradient(90deg, rgba(236, 144, 9, 0.42) 11.5%, rgba(126, 138, 180, 0.42) 100%);
+    box-shadow: 0px 4px 10.9px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .bottom {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .web-logo-bottom {
+    display: flex;
+    width: 248px;
+    flex-direction: column;
+    gap: 10px;
+    position: relative;
+    margin-top: 85px;
+    margin-right: 220px;
+    
+  }
+
+  .cta-addcart-button {
+    width: auto;
+    padding: 10px 10px; 
+    background-color: #ffffff; 
+    border: none; 
+    border-radius: 50px; 
+    cursor: pointer;
+    margin-bottom:100px; 
+    margin-top: 80px;
+  }
+
+  .pricing {
+    display: flex;
+    margin-right: 100px;
+    margin-top: 100px;
+  
+  }
+
+  .FC-button {
+    display: flex;
+    width: 244px;
+    height:20px;
+    flex-direction: column;
+    justify-content: center;
+    padding: 50px 30px; 
+    background-color: #1B203D; 
+    color: white; 
+    border: none; 
+    border-radius: 10px; 
+    cursor: pointer;
+  }
+
+  .game-cover-cart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+  }
+
+  .cart-game-title {
+    margin-top: -100px;
+  }
+  
+  .cart-price {
+    margin-left: -330px;
+    margin-top: 150px;
+  }
+  
+  .payment-txt {
+    display: flex;
+    padding: 10%;
+  }
+
+}
+
+
+@media (max-width: 393px) {
+  .game-des {
+    visibility: hidden;
+    color: #FFF;
+    max-width: 50%;
+    justify-content: flex-start;
+    padding: 5px;
+    font
+  }
 }
