--- a/css/styles.css
+++ b/css/styles.css
@@ -416,7 +416,16 @@
   .full-catalogue {
     display: flex;
     flex-direction: column;
-    padding: 100px;
+  
+  }
+  
+  .game-cover {
+    max-width: 100%;
+   max-height: 100%;
+   height: 200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   }
   
   .about-text {
